--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,11 @@
 /* your code here */
+a{
+	color: rgb(27,27,27);
+	text-decoration: none;
+	}
+
+.content{
+	display: flex;
+	justify-content: space-evenly;
+	
+}
