--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,9 @@
 a{
 	color: rgb(27,27,27);
 	text-decoration: none;
-	}
-
-.content{
+	padding: 439px;
+}
+.media-icons{
 	display: flex;
 	justify-content: space-evenly;
-	
 }
